# d4-dbst-old

./: .gitignore  README.md  dataset_test.py  pyproject.toml
cfg/: dataset_test.yaml
data/: __init__.py  colormap.py  datamodule.py  dataset.py  semmap.py  transforms.py  utils.py
data/dep/: __init__.py  dep.py
data/sem/: __init__.py  cs_sem.py  gta_sem.py  sem.py  synthia_sem.py
tests/: test_d4_dbst.py
