[tool.poetry]
name = "d4-dbst"
version = "0.1.0"
description = ""
authors = ["Adriano Cardace cardace6@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.0"
torchvision = "^0.8.1"
pytorch-lightning = "^1.0.7"
wandb = "^0.10.11"
hydra-core = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
(
  /(
      .git
    | .venv
    | build
    | dist
  )
)
'''