[tool.poetry]
name = "d4-dbst"
version = "0.1.0"
description = "Implementation of D4-DBST paper"
authors = [
    "Adriano Cardace cardace6@gmail.com",
    "Luca De Luigi lucadeluigi91@gmail.com"
]

[tool.poetry.dependencies]
python = "^3.8"
hesiod = "^0.1.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
pytorch-lightning = "^1.1.1"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
/(
    .git
    | .mypy_cache
    | .venv
    | build
    | dist
)
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 9
